--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -374,6 +374,9 @@ p.price-tour
 
 .img-block
     max-height: 3.3rem
+    img
+        width: 100%
+        max-width: 4.5rem
 
 .text
     font-size: 1.2rem
