--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -356,7 +356,10 @@ p.price-tour
     text-transform: uppercase
     color: #ffb700
     font-weight: 400
+    transition: all 0.5s ease
     +circle-arrow(false)
+    &:hover
+        transform: scale(1.1)
 
 .info
     font-size: 2.4rem
