--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,6 +7,13 @@ html(lang="en")
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet")
+        link(rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png")
+        link(rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png")
+        link(rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png")
+        link(rel="manifest" href="img/manifest.json")
+        meta(name="msapplication-TileColor" content="#ffffff")
+        meta(name="msapplication-TileImage" content="img/ms-icon-144x144.png")
+        meta(name="theme-color" content="#ffffff")
         link(rel="stylesheet", href="css/styles.css")
         title Document
     body
