--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -127,12 +127,12 @@ html(lang="en")
                         +serviceCard(cardService.serf)
             hr.container.mb-5
             section.files.container.mb-5
-                .row.container
+                .row.container-fluid.m-0.d-flex.justify-content-center.align-center
                     .col-sm-12.col-lg
-                        p.info додаткова інформація
-                    .col-sm-6.col-lg.house.p-3.mb-3.mx-lg-2
+                        p.infoдодаткова інформація
+                    .col-sm-6.col-lg.house.p-3.mb-3.mx-2
                         +cardSave(fileSave.grafic)
-                    .col-sm-6.col-lg.people.p-3.mb-3.mx-lg-2
+                    .col-sm-6.col-lg.people.p-3.mb-3.mx-2
                         +cardSave(fileSave.food)
                     .col-sm-12.col-lg.text-center.contacts.mb-3.mx-2
                         p.quetion задати питання
