--- a/src/pug/components/mixins.pug
+++ b/src/pug/components/mixins.pug
@@ -44,7 +44,7 @@ mixin star(star)
             path(d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z")
 
 mixin veloBox 
-    p.velo-box 
+    p.left-box
         svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="3.5rem" fill="#ffffff")
             path(d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1V416c0 17.7 14.3 32 32 32s32-14.3 32-32V288c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H427.2zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z")
 -
@@ -95,15 +95,16 @@ mixin veloBox
 mixin serviceCard(cardService) 
     figure.last-card 
         figcaption
-            img.card-img-top.left-box(src=cardService.img, alt=cardService.alt class="img")
+            p.left-box
+                img.card-img-top(src=cardService.img, alt=cardService.alt class="img")
             .card-box.p-3
                 .text-box
                     p.propose #{cardService.propose}
-                    p.descriptionService #{cardService.descriptionService}
+                    p.descriptionService.m-0 #{cardService.descriptionService}
                 .row
-                    p.priceServise.col-6 #{cardService.priceServise}
+                    p.priceServise.col-7 #{cardService.priceServise}
                         span.currensy #{cardService.currensyService}
-                    a.col-6.pay.py-3(href=cardService.href) #{cardService.ctaText}
+                    a.col-5.text-end.pay.py-3(href=cardService.href) #{cardService.ctaText}
 
 -
     let 
@@ -129,11 +130,10 @@ mixin serviceCard(cardService)
 mixin cardSave(fileSave)
     .card-savefile
         .img-block.d-flex
-            img.px-3(src=fileSave.img, alt=fileSave.alt class="img")
-            .file-block.px-3
+            svg(xmlns="http://www.w3.org/2000/svg" height="5rem" viewBox="0 96 960 960" width="5rem" fill="#ffb700")
+                path(d="M220 976q-24 0-42-18t-18-42V236q0-24 18-42t42-18h361l219 219v521q0 24-18 42t-42 18H220Zm331-554V236H220v680h520V422H551ZM220 236v186-186 680-680Z")
+            .file-block
                 p.text #{fileSave.text}
                 p.sizetext #{fileSave.sizetext}
-        .row
-            p.descript.py-5 #{fileSave.descript}
-        .row.p-2
-            a.col-4.download-cta.my-3.py-1.text-end(href=fileSave.href) #{fileSave.download}
+        p.descript #{fileSave.descript}
+        a.download-cta(href=fileSave.href) #{fileSave.download}
