--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,12 +15,13 @@ html(lang="en")
         meta(name="msapplication-TileImage" content="img/ms-icon-144x144.png")
         meta(name="theme-color" content="#ffffff")
         link(rel="stylesheet", href="css/styles.css")
-        title Document
+        title Туристична компанія Sea Trips, морські пригоди - обери свій план подорожі. Гарячі путівки, великий вибір країн.
+        //- паддінги вручну, на кнопку скачать більший паддінг, для велосипеда задати на фото батьківський конт і до нього прицепити блок з велочипедом, зменшити відступи на коментарях, збільшити паддінги
     body
         include components/mixins
         header 
             nav.navbar.navbar-expand-lg.bcg-nav.container.pb-3.navbar-dark
-                .container-fluid.d-flex.justify-content-between.gap-3.py-5
+                .container.d-flex.justify-content-between.gap-3.py-5
                     a.navbar-brand.logo(href='#') 
                         img(src="img/logo.png", alt="")
                     button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
@@ -44,7 +45,7 @@ html(lang="en")
             .main-container.border-main.container-fluid.text-center.mx-auto.py-5
                 h1 Морські пригоди
                 p.d-block.mx-auto.mb-0 Не важливо, чи Ваша мандрівка належить до елітного рівня чи до економваріанту, туроператор S trips потурбується, щоб Ви залишились задоволеними!
-                a.cta.my-4(href="#") детальніше
+                a.cta.my-4.first-cta(href="#") детальніше
             .container.scroll-bottom-block.text-center.py-5.mx-auto
                 h2.mx-auto.py-5 обери свій план подорожі
                 p Наша фірма -лідер на ринку у своїй сфері
@@ -69,9 +70,8 @@ html(lang="en")
                                 +star
                                 +card(firstCard.special)
                                 a(href="#") 
-                            .row.justify-content-center
-                                .col-sm-5.col-lg-4
-                                    a.plan.text-center.py-5(href="#") дивитись усі плани
+                            .text-center
+                                a.plan.text-center(href="#") дивитись усі плани
             hr.container.py-4
             section.container.my-5
                 .row
@@ -98,10 +98,10 @@ html(lang="en")
                             p.serf-block Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитсь? Наші досвдчені інструктори навчать тебе вміло «піймати хвилі» та відчути себе справжнім сьорфером!
                             a.cta(href="#") детальніше
                         .col-md.border-box
-                            .text-center
+                            .lapki
                                 picture
                                     img(src="img/lapki.svg", alt="")
-                            p.descript.my-5 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
+                            p.descript.my-5.p-4 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
                             .text-center.client-box
                                 p.name-client.m-0 Олег Набережний
                                 p.client клієнт
@@ -112,24 +112,24 @@ html(lang="en")
                     h2 Спеціальні пропозиції тижня
                     p Гарячі праозиції, по-швидше обирай і поїхали!
                 .row.py-5
-                    .col-sm-6.col-lg-3
+                    .col-sm-6.col-lg-3.my-2
                         +star
                         +serviceCard(cardService.romantic)
-                    .col-sm-6.col-lg-3
+                    .col-sm-6.col-lg-3.my-2
                         +star
                         +veloBox
                         +serviceCard(cardService.velotour)
-                    .col-sm-6.col-lg-3
+                    .col-sm-6.col-lg-3.my-2
                         +star
                         +serviceCard(cardService.islandtour)
-                    .col-sm-6.col-lg-3
+                    .col-sm-6.col-lg-3.my-2
                         +star
                         +serviceCard(cardService.serf)
             hr.container.mb-5
             section.files.container.mb-5
-                .row.container-fluid.m-0.d-flex.justify-content-center.align-center
+                .row.container-fluid.gy-2.m-0.d-flex.justify-content-center.align-center.question-block
                     .col-sm-12.col-lg
-                        p.infoдодаткова інформація
+                        p.info додаткова інформація
                     .col-sm-6.col-lg.house.p-3.mb-3.mx-2
                         +cardSave(fileSave.grafic)
                     .col-sm-6.col-lg.people.p-3.mb-3.mx-2
@@ -137,14 +137,14 @@ html(lang="en")
                     .col-sm-12.col-lg.text-center.contacts.mb-3.mx-2
                         p.quetion задати питання
                         p.text-quetion Скажіть доброго дня нашому консультанту, і ми з радістю відповімо на Ваші запитання
-                        .row
-                            svg.col-2.svg-phone(xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16")
+                        a.phone(href="tel:+380505698511") +38 (050) 56 98 511
+                            svg.svg-phone(xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16")
                                 path(fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z")
-                            a.col-9.pnone(href="tel:+380505698511") +38 (050) 56 98 511
-                        p.name-bottom.pt-2 Анна Миколаївна
-                        p.client консультант
-                        picture
-                            img.client-photo-bottom.p-0(src="img/bottomclient.webp", alt="")
+                        .client-box
+                            p.name-bottom.pt-2.m-0 Анна Миколаївна
+                            p.client консультант
+                            picture
+                                img.client-photo-bottom.p-0(src="img/bottomclient.webp", alt="")
         footer
             .bottom-bcg.mx-auto.p-0.container-fluid 
                 picture 
