--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -1,9 +1,9 @@
 @import components/mixins
 
 html
-    font-size: 12px
+    font-size: 11px
     +media(768)
-        font-size: 13px
+        font-size: 12px
     +media(1440)
         font-size: 15px
     +media(2200)
@@ -41,6 +41,14 @@ h1
 hr
     border: none
     border-top: 0.15rem solid #dfe3e6
+
+.container
+    +media(2200)
+        max-width: 160rem
+
+img
+    +media(2200)
+        width: 20%
 
 .logo
     width: none
@@ -91,6 +99,10 @@ hr
 
 .cta 
     +btn(true)
+
+.first-cta
+    position: relative
+    z-index: 3
 
 .btn
     +btn($empty:true)
@@ -194,14 +206,19 @@ p.note
     font-weight: 400
 
 .plan
-    display: block
+    padding: 1rem 2rem
+    display: inline-block
     position: relative
-    font-size: 1.25rem
+    font-size: 0.9rem
     line-height: 1.2em
     text-transform: uppercase
     color: #0099ff
     font-weight: 400
+    transition: all 1s ease
     +circle-arrow(true)
+    &:hover
+        text-shadow: 1rem 0rem 0.5rem #99e0e9
+        transform: scale(1.2)
 
 .descript-text
     h2
@@ -263,10 +280,19 @@ p.price-tour
     font-family: "PT Sans"
 
 .border-box
-    min-height: 20rem
-    max-height: 20rem
     position: relative
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    min-height: 20rem
+    padding-bottom: 3rem
     +border(true)
+
+.lapki
+    position: absolute
+    top: -0.5rem
+    left: 50%
+    transform: translate(-50%)
 
 .descript
     font-size: 1rem
@@ -274,11 +300,6 @@ p.price-tour
     color: #ffffff
     font-weight: 400
     font-style: italic
-
-.client-box
-    position: relative
-    top: 0
-    left: 0
 
 .name-client
     font-size: 1.2rem
@@ -293,7 +314,12 @@ p.price-tour
     font-weight: 400
 
 .client-photo
+    position: absolute
+    left: 50%
+    transform: translate(-50%)
     border-radius: 50%
+    +media(2200)
+        width: 15%
 
 .week-proposition
     position: relative
@@ -310,7 +336,7 @@ p.price-tour
         font-weight: 400
         font-style: italic
 
-.velo-box
+.left-box
     position: relative
     &::before  
         content: ""
@@ -328,7 +354,9 @@ p.price-tour
         background-color: #ffffff
 
 .text-box
-    min-height: 10rem
+    min-height: 8rem
+    +media(1024)
+        min-height: 10rem
     
 .propose
     font-size: 1.2rem
@@ -349,6 +377,7 @@ p.price-tour
     font-weight: 400
 
 .pay
+    padding-right: 2rem
     position: relative
     display: inline-block
     font-size: 0.8rem
@@ -373,18 +402,16 @@ p.price-tour
         text-align: start
 
 .house
-    max-width: 20rem
     background: url("../img/house.webp") no-repeat center/cover
 
 .people
-    max-width: 20rem
     background: url("../img/people.webp") no-repeat center/cover
 
 .img-block
-    max-height: 3.3rem
-    img
-        width: 100%
-        max-width: 4.5rem
+    width: 100%
+    column-gap: 1rem
+    svg
+        width: 8rem
 
 .text
     font-size: 1.2rem
@@ -399,7 +426,7 @@ p.price-tour
     font-weight: 400
 
 .descript
-    max-height: 6.7rem
+    height: 5rem
     font-size: 1rem
     line-height: 1.4em
     color: #fefefe
@@ -408,10 +435,24 @@ p.price-tour
 .download-cta
     +cloud-btn(true)
 
+.question-block
+    +media(2200)
+        flex-wrap: nowrap
+
 .contacts
     position: relative
-    top: -0.67rem
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    min-height: 20rem
+    padding-bottom: 3rem
     +border(false)
+    +media(576)
+        max-width: 23.5rem
+    +media(768)
+        max-width: 28.5rem
+    +media(992)
+        top: -0.75rem
 
 .quetion
     font-size: 1.2rem
@@ -426,12 +467,6 @@ p.price-tour
     color: #999999
     font-weight: 400
 
-.svg-phone
-    position: relative
-    top: 0rem
-    left: 4rem
-    fill: #0099ff
-
 .phone,
 .name-bottom
     font-size: 1.2rem
@@ -439,13 +474,30 @@ p.price-tour
     color: #0099ff
     font-weight: 400
 
+.phone
+    position: relative
+    display: inline-block
+    left: 50%
+    width: 16rem
+    padding-left: 2rem
+    transform: translate(-50%)
+
+.svg-phone
+    position: absolute
+    top: 0rem
+    left: 2rem
+    fill: #0099ff
+
 .name-bottom
     color: #333333
 
 .client-photo-bottom
-    position: relative
-    top: 3rem
+    position: absolute
+    left: 50%
+    transform: translate(-50%)
     border-radius: 50%
+    +media(2200)
+        width: 30%
 
 .footer
     background-color: #1a1a1a
