--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -15,6 +15,8 @@ header
 body 
     font-family: "Rubik"
     background-color: #f5f8fa
+    cursor: url("../img/cursorua.cur"), default
+
 ul
     li
         .color
@@ -29,6 +31,7 @@ ul
 
 a
     text-decoration: none
+    cursor: url("../img/cursoruahover.cur"), default
 
 h1
     font-size: 4.8rem
