--- a/src/pug/components/mixins.pug
+++ b/src/pug/components/mixins.pug
@@ -45,12 +45,13 @@ mixin star(star)
 
 mixin veloBox 
     p.left-box
-        svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="3.5rem" fill="#ffffff")
+        svg.velo-svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="3rem" fill="#ffffff")
             path(d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1V416c0 17.7 14.3 32 32 32s32-14.3 32-32V288c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H427.2zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z")
 -
     let 
         cardService = {
             romantic: {
+                velobox: false,
                 img: "img/boat.webp",
                 alt: "Романтична подорож на 2, Подорож у найромантичніші куточки світу",
                 propose: "Романтична подорож на 2",
@@ -61,6 +62,7 @@ mixin veloBox
                 href: "#",
             },
             velotour: {
+                velobox: true,
                 img: "img/velo.webp",
                 alt: "Велотур,прокататись з вітерцем, та ще й з критим краєвидом довкола ",
                 propose: "Велотур",
@@ -71,6 +73,7 @@ mixin veloBox
                 href: "#",
             },
             islandtour: {
+                velobox: false,
                 img: "img/palm.webp",
                 alt: "На острови",
                 propose: "На острови!",
@@ -81,6 +84,7 @@ mixin veloBox
                 href: "#",
             },
             serf: {
+                velobox: false,
                 img: "img/serf.webp",
                 alt: "Катання на сьорфінгу",
                 propose: "Катання на сьорфінгу",
@@ -95,7 +99,7 @@ mixin veloBox
 mixin serviceCard(cardService) 
     figure.last-card 
         figcaption
-            p.left-box
+            p(class= (cardService.velobox) ? "left-box": "")
                 img.card-img-top(src=cardService.img, alt=cardService.alt class="img")
             .card-box.p-3
                 .text-box
