--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -91,9 +91,9 @@ html(lang="en")
                                 p В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
             section.container-fluid.sea-bcg.py-5
                 .container.py-5#recencion
-                    .row 
-                        .col-md.my-5
-                            p.cl-white СПІЙМАЙ ХВИЛЮ
+                    .row.gy-5
+                        .col-md
+                            p.cl-white.mb-0 СПІЙМАЙ ХВИЛЮ
                             p.cl-blue ЖИВИ ЯСКРАВО!
                             p.serf-block Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитсь? Наші досвдчені інструктори навчать тебе вміло «піймати хвилі» та відчути себе справжнім сьорфером!
                             a.cta(href="#") детальніше
@@ -101,7 +101,7 @@ html(lang="en")
                             .lapki
                                 picture
                                     img(src="img/lapki.svg", alt="")
-                            p.descript.my-5.p-4 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
+                            p.descript.my-4.p-5 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
                             .text-center.client-box
                                 p.name-client.m-0 Олег Набережний
                                 p.client клієнт
