--- a/src/sass/components/mixins.sass
+++ b/src/sass/components/mixins.sass
@@ -62,17 +62,17 @@
 
 =flag($flag)
     position: absolute
-    top: -1.64rem
-    left: -2.67rem
-    border: 2.67rem solid transparent
+    top: -1.99rem
+    left: -3rem
+    border: 3rem solid transparent
     border-top-color: #26cb15
     transform: rotate(135deg)
     z-index: 3
 
 =veloBox($velobox)
-    @if left-box
+    @if $velobox
         position: absolute
-        width: 4rem
+        width: 4.25rem
         height: 100%
         top: 0
         left: 0
