--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -186,7 +186,7 @@ p.note
 
 .star
     position: absolute
-    top: -3.9rem
+    top: -3.5rem
     left: 0.6rem
     z-index: 4
 
@@ -344,11 +344,13 @@ p.price-tour
     &::before  
         content: ""
         +veloBox(true)
-    svg
-        position: absolute
-        top: 5rem
-        left: 0.25rem
-        z-index: 4
+
+.velo-svg
+    position: absolute
+    top: 50%
+    left: 0.7rem
+    transform: translateY(-50%)
+    z-index: 4
 
 .last-card
     transition: all .5s ease
