--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -164,6 +164,9 @@ img
         color: #555555
         font-weight: 400
         font-style: italic
+
+.proposition 
+    max-width: 25rem
         
 p.note 
     font-size: 0.9rem
@@ -186,7 +189,7 @@ p.note
 
 .star
     position: absolute
-    top: -3.5rem
+    top: -3.9rem
     left: 0.6rem
     z-index: 4
 
@@ -339,8 +342,12 @@ p.price-tour
         font-weight: 400
         font-style: italic
 
+.lastcard-service 
+    max-width: 25rem
+
 .left-box
     position: relative
+    width: 100%
     &::before  
         content: ""
         +veloBox(true)
