--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -359,11 +359,15 @@ p.price-tour
     transform: translateY(-50%)
     z-index: 4
 
+.none
+    display: none
+
 .last-card
     transition: all .5s ease
     &:hover
         box-shadow: 0rem 0.26rem 0.7rem rgba(3,20,31,0.05)
         background-color: #ffffff
+
 
 .text-box
     min-height: 8rem
@@ -497,7 +501,7 @@ p.price-tour
 .svg-phone
     position: absolute
     top: 0rem
-    left: 2rem
+    left: 1.5rem
     fill: #0099ff
 
 .name-bottom
