--- a/src/pug/components/mixins.pug
+++ b/src/pug/components/mixins.pug
@@ -43,15 +43,12 @@ mixin star(star)
         svg.star(xmlns="http://www.w3.org/2000/svg" width="1rem" height="12rem" fill="#ffffff" class="bi bi-star-fill" viewBox="0 0 16 16")
             path(d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z")
 
-mixin veloBox 
-    p.left-box
-        svg.velo-svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="3rem" fill="#ffffff")
-            path(d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1V416c0 17.7 14.3 32 32 32s32-14.3 32-32V288c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H427.2zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z")
 -
     let 
         cardService = {
             romantic: {
                 velobox: false,
+                svg: false,
                 img: "img/boat.webp",
                 alt: "Романтична подорож на 2, Подорож у найромантичніші куточки світу",
                 propose: "Романтична подорож на 2",
@@ -63,6 +60,7 @@ mixin veloBox
             },
             velotour: {
                 velobox: true,
+                svg: true,
                 img: "img/velo.webp",
                 alt: "Велотур,прокататись з вітерцем, та ще й з критим краєвидом довкола ",
                 propose: "Велотур",
@@ -74,6 +72,7 @@ mixin veloBox
             },
             islandtour: {
                 velobox: false,
+                svg: false,
                 img: "img/palm.webp",
                 alt: "На острови",
                 propose: "На острови!",
@@ -85,6 +84,7 @@ mixin veloBox
             },
             serf: {
                 velobox: false,
+                svg: false,
                 img: "img/serf.webp",
                 alt: "Катання на сьорфінгу",
                 propose: "Катання на сьорфінгу",
@@ -100,6 +100,9 @@ mixin serviceCard(cardService)
     figure.last-card 
         figcaption
             p(class= (cardService.velobox) ? "left-box": "")
+                span(class= (cardService.svg) ? "velo-svg": "none")
+                    svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="3rem" fill="#ffffff")
+                        path(d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1V416c0 17.7 14.3 32 32 32s32-14.3 32-32V288c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H427.2zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z")
                 img.card-img-top(src=cardService.img, alt=cardService.alt class="img")
             .card-box.p-3
                 .text-box
