--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -117,7 +117,6 @@ html(lang="en")
                         +serviceCard(cardService.romantic)
                     .col-sm-6.col-lg-3.my-2.lastcard-service
                         +star
-                        +veloBox
                         +serviceCard(cardService.velotour)
                     .col-sm-6.col-lg-3.my-2.lastcard-service
                         +star
@@ -138,8 +137,9 @@ html(lang="en")
                         p.quetion задати питання
                         p.text-quetion Скажіть доброго дня нашому консультанту, і ми з радістю відповімо на Ваші запитання
                         a.phone(href="tel:+380505698511") +38 (050) 56 98 511
-                            svg.svg-phone(xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16")
-                                path(fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z")
+                            svg.svg-phone(xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" viewBox="0 0 24 24" id="phone")
+                                path(fill="none" d="M0 0h24v24H0V0z")
+                                path(d="M19.23 15.26l-2.54-.29c-.61-.07-1.21.14-1.64.57l-1.84 1.84c-2.83-1.44-5.15-3.75-6.59-6.59l1.85-1.85c.43-.43.64-1.03.57-1.64l-.29-2.52c-.12-1.01-.97-1.77-1.99-1.77H5.03c-1.13 0-2.07.94-2 2.07.53 8.54 7.36 15.36 15.89 15.89 1.13.07 2.07-.87 2.07-2v-1.73c.01-1.01-.75-1.86-1.76-1.98z")
                         .client-box
                             p.name-bottom.pt-2.m-0 Анна Миколаївна
                             p.client консультант
