--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -91,7 +91,7 @@ html(lang="en")
                                 p В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
             section.container-fluid.sea-bcg.py-5
                 .container.py-5#recencion
-                    .row.gy-5
+                    .row.gap.pb-4
                         .col-md
                             p.cl-white.mb-0 СПІЙМАЙ ХВИЛЮ
                             p.cl-blue ЖИВИ ЯСКРАВО!
@@ -99,8 +99,8 @@ html(lang="en")
                             a.cta(href="#") детальніше
                         .col-md.border-box
                             .lapki
-                                picture
-                                    img(src="img/lapki.svg", alt="")
+                                svg(xmlns="http://www.w3.org/2000/svg" width="4rem" height="4rem" viewBox="0 0 8 8" id="double" fill="#ffb700")
+                                    path(d="M0 1v3h2c0 1.11-.89 2-2 2v1c1.65 0 3-1.35 3-3V1H0zm5 0v3h2c0 1.11-.89 2-2 2v1c1.65 0 3-1.35 3-3V1H5z")
                             p.descript.my-4.p-5 Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
                             .text-center.client-box
                                 p.name-client.m-0 Олег Набережний
@@ -148,7 +148,7 @@ html(lang="en")
         footer
             .bottom-bcg.mx-auto.p-0.container-fluid 
                 picture 
-                    img.img-fluid.w-100(src="img/footerfoto.webp", alt="")
+                    img.img-fluid.w-100.palm(src="img/footerfoto.webp", alt="")
             .footer.text-center.p-2
                 p.copyright.m-2 &copy 2016 Cars.com All rights reserved.
     script(src="js/scripts.js")
