--- a/src/pug/components/mixins.pug
+++ b/src/pug/components/mixins.pug
@@ -109,15 +109,14 @@ mixin serviceCard(cardService)
                     p.propose #{cardService.propose}
                     p.descriptionService.m-0 #{cardService.descriptionService}
                 .row
-                    p.priceServise.col-7 #{cardService.priceServise}
+                    p.priceServise.col.m-0 #{cardService.priceServise}
                         span.currensy #{cardService.currensyService}
-                    a.col-5.text-end.pay.py-3(href=cardService.href) #{cardService.ctaText}
+                    a.col.text-end.pay.py-3(href=cardService.href) #{cardService.ctaText}
 
 -
     let 
         fileSave = {
             grafic: {
-                img: "img/file.png",
                 text: "Графік роботи готелів.xls",
                 sizetext: "Розмір файла: 10Mb",
                 descript: "Розклад роботи усіх наших готелів, можете знайти за цим посиланням. Та додатково завантажити їх фото.",
@@ -125,7 +124,6 @@ mixin serviceCard(cardService)
                 href: "#",
             },
             food: {
-                img: "img/file.png",
                 text: "Інформація про харчування.xls",
                 sizetext: "Розмір файла: 10Mb",
                 descript: "У будь-якому нашому турі включені сніданки у вартість. Якщо ж бажаєте замовити додотково, то ознайомтесь з умовами.",
@@ -144,3 +142,6 @@ mixin cardSave(fileSave)
                 p.sizetext #{fileSave.sizetext}
         p.descript #{fileSave.descript}
         a.download-cta(href=fileSave.href) #{fileSave.download}
+            svg.cloud(xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" id="cloud" fill="#ffb700" viewBox="0 0 50 50")
+                path(fill="none" d="M0 0h48v48H0z")
+                path(d="M38.71 20.07C37.35 13.19 31.28 8 24 8c-5.78 0-10.78 3.28-13.29 8.07C4.69 16.71 0 21.81 0 28c0 6.63 5.37 12 12 12h26c5.52 0 10-4.48 10-10 0-5.28-4.1-9.56-9.29-9.93zM38 36H12c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8h4c0-5.52-3.73-10.15-8.8-11.55C17.21 13.76 20.4 12 24 12c6.07 0 11 4.93 11 11v1h3c3.31 0 6 2.69 6 6s-2.69 6-6 6z")
