--- a/src/sass/components/mixins.sass
+++ b/src/sass/components/mixins.sass
@@ -31,14 +31,16 @@
             border: 0.06rem solid  #0099ff
 
 =circle-arrow($arrow)
+    box-sizing: border-box
     &::before
         content: ""
         position: absolute
-        top: 1rem
+        top: 50%
         right: 0
-        width: 0.9rem
-        height: 0.9rem
+        width: 1rem
+        height: 1rem
         border-radius: 50%
+        transform: translateY(-50%)
         @if $arrow
             border: 0.06rem solid #0099ff
         @else
@@ -47,11 +49,11 @@
     &::after
         content: ""
         position: absolute
-        top: 1.3rem
+        top: 50%
         right: 0.35rem
         width: 0.3rem
         height: 0.3rem
-        transform: rotate(135deg)
+        transform: translateY(-50%) rotate(135deg)
         @if $arrow
             border-top: 0.06rem solid #0099ff
             border-left: 0.06rem solid #0099ff
@@ -136,23 +138,6 @@
     background-color: rgba(255,183,0,0)
     border: 0.13rem solid #ffb700
     transition: all .5s ease
-    &::before
-        content: ""
-        position: absolute
-        top: 0.3rem
-        left: 0.5rem
-        width: 1.35rem
-        height: 0.9rem
-        background: url("../img/cloud.png")
-        +media(1440)
-            top: 0.5rem
-            left: 0.5rem
-            width: 1rem
-            height: 0.8rem
-        +media(2200)
-            width: 1.1rem
-            height: 0.8rem
-            background-size: 100%
     &:hover
         background-color: #fff
 
