--- a/src/sass/components/mixins.sass
+++ b/src/sass/components/mixins.sass
@@ -31,6 +31,7 @@
             border: 0.06rem solid  #0099ff
 
 =circle-arrow($arrow)
+    position: relative
     box-sizing: border-box
     &::before
         content: ""
