--- a/src/sass/components/mixins.sass
+++ b/src/sass/components/mixins.sass
@@ -58,10 +58,10 @@
         content: ""
         position: absolute
         top: 50%
-        right: 0.35rem
+        right: 50%
         width: 0.3rem
         height: 0.3rem
-        transform: translateY(-50%) rotate(135deg)
+        transform: translate(-50%, -50%) rotate(135deg)
         @if $arrow
             border-top: 0.06rem solid #0099ff
             border-left: 0.06rem solid #0099ff
