--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -180,7 +180,7 @@ p.note
         min-width: 18rem
         transition: all .5s ease
         &:hover
-            filter: drop-shadow(0rem 0.26rem 0.7rem rgba(3,20,31,0.05))
+            box-shadow: 0rem 0.26rem 0.7rem rgba(3,20,31,0.05)
             background-color: #ffffff
             transform: scale(1.1)
 .flag
