--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -383,6 +383,12 @@ p.price-tour
         background-color: #ffffff
         transform: scale(1.1)
 
+.full-href
+    position: absolute
+    width: 100%
+    height: 100%
+    z-index: 4
+
 .text-box
     min-height: 8rem
     +media(1024)
